k8s/wshoto/tekton/gitee-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: el-gitee-listener
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`devops.eplus.ltd`)
      kind: Rule
      services:
        - name: el-gitee-listener  # 关联 EventListener 服务
          port: 8080
