k8s/wshoto/tekton/gitee-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: el-gitee-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: el-gitee-listener
spec:
  hosts:
    - "el.gitee.iishoni.com"
  gateways:
    - el-gitee-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: el-gitee-listener
            port:
              number: 8080
